--- a/CSS Properties/Motivation Meme Project/style.css
+++ b/CSS Properties/Motivation Meme Project/style.css
@@ -6,6 +6,7 @@ background-color: black;
 }
 h1{
     font-family: Libre Baskerville;
+    text-transform: uppercase;
 }
 img{
     border: 5px solid white;
